--- a/src/app/pages/email-20min/email-20min.component.html
+++ b/src/app/pages/email-20min/email-20min.component.html
@@ -7,7 +7,7 @@
         20 Minute Disposable Email Inbox
       </h1>
       <p class="mx-auto max-w-3xl text-sm md:text-base text-gray-600">
-        Need more time than a basic temp mail? Get a 20 minute temporary email address for multi-step verifications, account activations, and extended sign-up processes. Completely free, anonymous, and auto-deleting for maximum privacy.
+        Need more time than a basic temp mail? Get a 20 minute temporary email address for multi-step verifications, account activations, and extended sign-up processes.
       </p>
     </div>
   </header>
