--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -14,15 +14,13 @@
        Best Temporary email created for you below. Use it for signups or OTPs while keeping your privacy safe.
       </p>
 
-      <div class="mt-8 lg:grid lg:grid-cols-[220px_minmax(0,1fr)_220px] lg:gap-6 lg:items-start">
-        <div></div>
+      <div class="container mx-auto px-4 max-w-5xl mt-8">
 
         <div class="rounded-2xl bg-white/80 backdrop-blur-sm shadow-2xl ring-1 ring-gray-200 animate-scale-in" 
              style="animation-delay: 0.2s">
           <app-main-temp-mail></app-main-temp-mail>
         </div>
 
-        <div></div>
       </div>
 
  
